# VIMS3D

./: .gitignore  AddinInfo.txt  FXSH_Build.bat  LICENSE  README.md  VIMS3D.G1A  VIMS3D.c  VIMS3D.dlr  VIMS3D.dlw  VIMS3D.g1w  VIMS_defs.c  VIMS_defs.h  assembly.h  assembly.src  fixed.c  fixed.h  game.c  game.h  hires_timer.c  hires_timer.h  mesh.c  mesh.h  meshrender.c  meshrender.h  raster.c  raster.h  settings.c  settings.h  snprintf_light.c  syscall.src  texture.c  texture.h  texturemap.c  ui.c  ui.h  uiobj.c  uiobj.h  vec.c  vec.h  world.c  (+3 more)
Debug/: Addin.mak  FXADDINror.abs  FXADDINror.dbg  FXADDINror.fsy  FXADDINror.map  Minecalc.lst  VIMS3D.lst  fixed.lst  game.lst  graphic.lst  meshrender.lst  raster.lst  texturemap.lst  vec.lst
Debug/tpldir/: Minecalc.pi  fixed.pi  game.pi  graphic.pi  vec.pi
INIT/: CasioRAM.mem  CasioUserROM.mem
gintbuild/: CMakeLists.txt
test/: fixed.c  fixed.h  test  test.c  vec.c  vec.h
textures/: bmp2carr.py
